#107 - initial version of collectRunner without possible array( optimisation - conflicts with subexpr